tdf#157172 tdf#157460 PPTX import: fix connectors adjustment values

Change-Id: Ie95ccd5bcd4d5c3f9c45c7dcc4f88acc0c9438aa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169830
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>